force-app/main/default/objects/HOMEtracker__Property__c/fields/Active_Cabinet_Location__c.field-meta.xml
<CustomField>
    <fullName>Active_Cabinet_Location__c</fullName>
    <description>Location in the office of the cabinet in which active files for this property are located.</description>
    <inlineHelpText>Location in the office of the cabinet in which active files for this property are located.</inlineHelpText>
    <label>OLD Cabinet Location (Active)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cabinet_Location</valueSetName>
    </valueSet>
</CustomField>