force-app/main/default/objects/HOMEtracker__Property__c/fields/Active_Cabinet_Number__c.field-meta.xml
<CustomField>
    <fullName>Active_Cabinet_Number__c</fullName>
    <description>Number of the cabinet in which active files for this property are located.</description>
    <inlineHelpText>Number of the cabinet in which active files for this property are located.</inlineHelpText>
    <label>OLD Cabinet Number (Active)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cabinet_Number</valueSetName>
    </valueSet>
</CustomField>