force-app/main/default/objects/HOMEtracker__Property__c/fields/Active_Filing_Notes__c.field-meta.xml
<CustomField>
    <fullName>Active_Filing_Notes__c</fullName>
    <description>Notes regarding the location of active files or any other additional information</description>
    <inlineHelpText>Example: Which drawer, color coding, etc.</inlineHelpText>
    <label>Filing Notes (Active)</label>
    <type>TextArea</type>
</CustomField>