force-app/main/default/objects/HOMEtracker__Property__c/fields/Active_Property__c.field-meta.xml
<CustomField>
    <fullName>Active_Property__c</fullName>
    <formula>ISBLANK(Development_address__c)=false &amp;&amp;
(RecordType.Name = &apos;Homeownership&apos; || RecordType.Name = &apos;Rental Unit&apos; )&amp;&amp;
Exclude_From_Inventory__c = false &amp;&amp;
CONTAINS(TEXT(HOMEtracker__Status__c),&apos;Available&apos;)&amp;&amp;
TEXT(Development_address__r.Google_Tracker_Review__c) != &apos;&apos;&amp;&amp;
TEXT(Development_address__r.Google_Tracker_Review__c) != &apos;No Review&apos;&amp;&amp;
Test_Property__c = false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Property</label>
    <type>Checkbox</type>
</CustomField>