force-app/main/default/objects/HOMEtracker__Property__c/fields/Add_Timelines__c.field-meta.xml
<CustomField>
    <fullName>Add_Timelines__c</fullName>
    <formula>HYPERLINK(
&apos;https://cgph--c.vf.force.com/flow/Outreach_Timeline_Add_Timeline_by_Development?varDevID=&apos;&amp; Id &amp;&apos;&amp;retURL=%2F&apos;&amp;Id
,&apos;Click Here&apos;,&apos;_top&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Add Timelines</label>
    <type>Text</type>
</CustomField>