force-app/main/default/objects/HOMEtracker__Property__c/fields/Additional_Eligibility_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Additional_Eligibility_Requirements__c</fullName>
    <inlineHelpText>Anything else this development requires for an applicant to be determined eligible.</inlineHelpText>
    <label>Additional Eligibility Requirements</label>
    <type>TextArea</type>
</CustomField>