force-app/main/default/objects/HOMEtracker__Property__c/fields/Additional_Parking_Fee__c.field-meta.xml
<CustomField>
    <fullName>Additional_Parking_Fee__c</fullName>
    <inlineHelpText>This text will show on the listing and should contain a short blurb about any parking fees and/or policies.</inlineHelpText>
    <label>Parking Listing Information &amp; Fees</label>
    <type>TextArea</type>
</CustomField>