force-app/main/default/objects/HOMEtracker__Property__c/fields/Administrative_Agent__c.field-meta.xml
<CustomField>
    <fullName>Administrative_Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who is the current administrative agent for this development? (Account Object)</inlineHelpText>
    <label>Administrative Agent</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Properties (Administrative Agent)</relationshipLabel>
    <relationshipName>Admin_Agent_Property</relationshipName>
    <type>Lookup</type>
</CustomField>