force-app/main/default/objects/HOMEtracker__Property__c/fields/Advertised_Rent_at_last_Vacancy__c.field-meta.xml
<CustomField>
    <fullName>Advertised_Rent_at_last_Vacancy__c</fullName>
    <label>Advertised Rent at last Vacancy</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>