force-app/main/default/objects/HOMEtracker__Property__c/fields/Affirmative_Marketing_Kick_Off__c.field-meta.xml
<CustomField>
    <fullName>Affirmative_Marketing_Kick_Off__c</fullName>
    <inlineHelpText>Do not use Old field used to track affirmative marketing (paid advertising placement dates and locations. date postcards will go out) has been replaced by date fields</inlineHelpText>
    <label>Do not use Affirm Marketing Kick Off</label>
    <type>TextArea</type>
</CustomField>