force-app/main/default/objects/HOMEtracker__Property__c/fields/Affordability__c.field-meta.xml
<CustomField>
    <fullName>Affordability__c</fullName>
    <label>100% Affordable or Inclusionary</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>100% Affordable</fullName>
            </value>
            <value>
                <fullName>Inclusionary</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>