force-app/main/default/objects/HOMEtracker__Property__c/fields/Affordability_restriction_del__c.field-meta.xml
<CustomField>
    <fullName>Affordability_restriction_del__c</fullName>
    <label>Affordability Restriction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Very-low</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>HUD</fullName>
            </value>
            <value>
                <fullName>LIHTC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>