force-app/main/default/objects/HOMEtracker__Property__c/fields/Affordable_controls_data_entry__c.field-meta.xml
<CustomField>
    <fullName>Affordable_controls_data_entry__c</fullName>
    <inlineHelpText>Process of priority order for entering affordable controls and RIN</inlineHelpText>
    <label>Affordable controls data entry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>In Process</fullName>
            </value>
            <value>
                <fullName>Phase 1</fullName>
            </value>
            <value>
                <fullName>Phase 2</fullName>
            </value>
            <value>
                <fullName>Phase 3</fullName>
            </value>
            <value>
                <fullName>Phase 4</fullName>
            </value>
            <value>
                <fullName>Phase 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>