force-app/main/default/objects/HOMEtracker__Property__c/fields/Age_Restricted__c.field-meta.xml
<CustomField>
    <fullName>Age_Restricted__c</fullName>
    <formula>CASE( TEXT(Age_Restriction__c),
&apos;&apos;,&apos;Unknown&apos;,
&apos;None&apos;,&apos;Not Age Restricted&apos;,
&apos;Age Restricted&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Field is populated by data in Age Restriction field</inlineHelpText>
    <label>Age Restricted</label>
    <type>Text</type>
</CustomField>