force-app/main/default/objects/HOMEtracker__Property__c/fields/Age_Restriction__c.field-meta.xml
<CustomField>
    <fullName>Age_Restriction__c</fullName>
    <description>If this is a family development, select &quot;None&quot;. Otherwise, &quot;55+ Exclusive&quot; means all hh members must be 55 or older; &quot;Over 18&quot; means one hh member must be 55 or older and the youngest hh member must be 19 or older; etc. This info is used for the listing.</description>
    <inlineHelpText>If this is a family development, select &quot;None&quot;. Otherwise, &quot;55+ Exclusive&quot; means all hh members must be 55 or older; &quot;Over 18&quot; means one hh member must be 55 or older and the youngest hh member must be 19 or older; etc. This info is used for the listing.</inlineHelpText>
    <label>Age Restriction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>55+ Exclusive</fullName>
            </value>
            <value>
                <fullName>Over 18</fullName>
            </value>
            <value>
                <fullName>Over 17</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>