force-app/main/default/objects/HOMEtracker__Property__c/fields/age_restriction_notes__c.field-meta.xml
<CustomField>
    <fullName>age_restriction_notes__c</fullName>
    <description>Information about how and when age restricted information has been confirmed.</description>
    <inlineHelpText>Information about how and when age restricted information has been confirmed.</inlineHelpText>
    <label>Age Restriction Notes</label>
    <type>TextArea</type>
</CustomField>