force-app/main/default/objects/HOMEtracker__Property__c/fields/AHMS_Monitoring_Notes__c.field-meta.xml
<CustomField>
    <fullName>AHMS_Monitoring_Notes__c</fullName>
    <inlineHelpText>Select any information that will need to be updated in AHMS.</inlineHelpText>
    <label>AHMS Unit Monitoring Notes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Number of Bedrooms</fullName>
            </value>
            <value>
                <fullName>Family/Age Restricted</fullName>
            </value>
            <value>
                <fullName>Income Level</fullName>
            </value>
            <value>
                <fullName>Affordability %</fullName>
            </value>
            <value>
                <fullName>Effective Date of Controls</fullName>
            </value>
            <value>
                <fullName>Perpetual Yes/No</fullName>
            </value>
            <value>
                <fullName>Length of Controls (Years)</fullName>
            </value>
            <value>
                <fullName>Housing Type</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>