force-app/main/default/objects/HOMEtracker__Property__c/fields/AHMS_Project_Data__c.field-meta.xml
<CustomField>
    <fullName>AHMS_Project_Data__c</fullName>
    <inlineHelpText>Status of entering project level data into state on-line monitoring (AHMS)</inlineHelpText>
    <label>AHMS Project Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Imported from CTM – not reviewed</fullName>
                <label>Project Entered in AHMS- Imported from CTM</label>
            </value>
            <value>
                <fullName>Project Entered in AHMS</fullName>
            </value>
            <value>
                <fullName>Project Entered in AHMS- Updates Needed</fullName>
            </value>
            <value>
                <fullName>CGP&amp;H not completing Project Monitoring</fullName>
                <label>Not Completing/Not Responsible</label>
            </value>
            <value>
                <fullName>New Project- Ready for AHMS</fullName>
                <label>Project Ready for Entry</label>
            </value>
            <value>
                <fullName>Project Monitoring Needed</fullName>
            </value>
            <value>
                <fullName>Waiting for AHMS Access</fullName>
            </value>
            <value>
                <fullName>Not Entered- Planned Project</fullName>
            </value>
            <value>
                <fullName>Beta Batch Upload Complete</fullName>
                <isActive>false</isActive>
                <label>Beta Batch Upload Complete</label>
            </value>
            <value>
                <fullName>Imported from CTM –imported from CTM – reviewed</fullName>
                <isActive>false</isActive>
                <label>Imported from CTM –imported from CTM – reviewed</label>
            </value>
            <value>
                <fullName>In progress</fullName>
                <isActive>false</isActive>
                <label>In progress</label>
            </value>
            <value>
                <fullName>Need to Check AHMS</fullName>
                <isActive>false</isActive>
                <label>Need to Check AHMS</label>
            </value>
            <value>
                <fullName>Need to start</fullName>
                <isActive>false</isActive>
                <label>Need to start</label>
            </value>
            <value>
                <fullName>Not Included in Prior Round Plan</fullName>
                <isActive>false</isActive>
                <label>Not Included in Prior Round Plan</label>
            </value>
            <value>
                <fullName>Planner Research Needed</fullName>
                <isActive>false</isActive>
                <label>Planner Research Needed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>