force-app/main/default/objects/HOMEtracker__Property__c/fields/AHMS_Unit_Inputted_by__c.field-meta.xml
<CustomField>
    <fullName>AHMS_Unit_Inputted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Staff person inputted Ahmas unit ino</inlineHelpText>
    <label>AHMS Unit Inputted by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Properties (AHMS Unit Inputted by)</relationshipLabel>
    <relationshipName>Properties9</relationshipName>
    <type>Lookup</type>
</CustomField>