force-app/main/default/objects/HOMEtracker__Property__c/fields/AHNJ_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>AHNJ_Website_URL__c</fullName>
    <formula>IF( Devel_Visible_on_Website__c = true, &quot;https://www.affordablehomesnewjersey.com/all-opportunities/developments/?did=&quot;&amp; Id,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AHNJ Website URL</label>
    <type>Text</type>
</CustomField>