force-app/main/default/objects/HOMEtracker__Property__c/fields/Allowed_IP_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Allowed_IP_Addresses__c</fullName>
    <inlineHelpText>IP addresses that are allowed to view public pages. Usually filled in automatically. Separate IP addresses with semicolons.</inlineHelpText>
    <label>Allowed IP Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>