force-app/main/default/objects/HOMEtracker__Property__c/fields/Amenities__c.field-meta.xml
<CustomField>
    <fullName>Amenities__c</fullName>
    <label>Complex Amenities</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>24 Hour Fitness Center</fullName>
            </value>
            <value>
                <fullName>24-hour private duty nursing for a fee</fullName>
            </value>
            <value>
                <fullName>Amazon Package Lockers</fullName>
            </value>
            <value>
                <fullName>Amenity Alcove with Co-Working Lounge and Individual Working Stations</fullName>
            </value>
            <value>
                <fullName>Amenity Terrace with Lounge Seating, Fire Pits, and BBQ Stations</fullName>
            </value>
            <value>
                <fullName>Amenity Terrace with Lounge Seating and Grill</fullName>
            </value>
            <value>
                <fullName>Basketball Courts</fullName>
            </value>
            <value>
                <fullName>BBQ Area</fullName>
            </value>
            <value>
                <fullName>Bicycle Share</fullName>
            </value>
            <value>
                <fullName>Bike Rack</fullName>
            </value>
            <value>
                <fullName>Bike Room with Shared Bikes</fullName>
            </value>
            <value>
                <fullName>Bike Storage</fullName>
            </value>
            <value>
                <fullName>Bike Wash</fullName>
            </value>
            <value>
                <fullName>Billiards</fullName>
            </value>
            <value>
                <fullName>Bocce Court</fullName>
            </value>
            <value>
                <fullName>Breakfast and dinner</fullName>
            </value>
            <value>
                <fullName>Business Center</fullName>
            </value>
            <value>
                <fullName>Car Chargers</fullName>
            </value>
            <value>
                <fullName>Club House</fullName>
                <label>Clubhouse</label>
            </value>
            <value>
                <fullName>Clubroom</fullName>
            </value>
            <value>
                <fullName>Community computer</fullName>
            </value>
            <value>
                <fullName>Community Garden</fullName>
            </value>
            <value>
                <fullName>Community Room</fullName>
            </value>
            <value>
                <fullName>Complimentary Wi-Fi in community areas</fullName>
            </value>
            <value>
                <fullName>Concierge Service</fullName>
            </value>
            <value>
                <fullName>Conference Room</fullName>
            </value>
            <value>
                <fullName>Controlled Access</fullName>
            </value>
            <value>
                <fullName>Courtyard</fullName>
            </value>
            <value>
                <fullName>Co-working Space</fullName>
            </value>
            <value>
                <fullName>Delivered meals for nominal fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>