force-app/main/default/objects/HOMEtracker__Property__c/fields/Amenity_Fee__c.field-meta.xml
<CustomField>
    <fullName>Amenity_Fee__c</fullName>
    <description>No mandatory rental amenity fee are allowed by affordable housing rules.  Options are:  
1.  no charge for use of amenities by affordable tenants.
2. There is an optional  $xxx (monthly or annual or 1 time) amenity fee for use of community amenities
3. N/A because there are no amenities</description>
    <inlineHelpText>No mandatory rental amenity fee allowed by affordable housing rules.  Options are:  
1.  no charge for use of amenities by affordable tenants.
2. There is an optional  $xxx (monthly or annual or 1 time) amenity fee for use of community amenities
3. N/A</inlineHelpText>
    <label>Amenity Fee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>