force-app/main/default/objects/HOMEtracker__Property__c/fields/Amount_Owner_Would_Receive__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owner_Would_Receive__c</fullName>
    <description>MRSP + 5% of Difference for Owner.</description>
    <formula>IF(Maximum_Re_Sale_Price__c &gt; Lenox_Meadow_Est_Market_Rate__c,

Lenox_Meadow_Est_Market_Rate__c,

(Maximum_Re_Sale_Price__c + X5_Difference_for_Owner__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>MRSP + 5% of Difference for Owner.</inlineHelpText>
    <label>Amount Owner Would Receive</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>