force-app/main/default/objects/HOMEtracker__Property__c/fields/Application_Submission_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Application_Submission_Deadline__c</fullName>
    <inlineHelpText>Deadline date of the current batch of invited applicants.</inlineHelpText>
    <label>Application Submission Deadline</label>
    <type>Date</type>
</CustomField>