force-app/main/default/objects/HOMEtracker__Property__c/fields/Approximate_Annual_Property_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Approximate_Annual_Property_Taxes__c</fullName>
    <formula>if(ISPICKVAL( HOMEtracker__Property_Type__c, &apos;Mobile or Manufactured Home&apos;),0,HOMEtracker__List_Price__c  *  Municipality_Name__r.General_Tax_Rate__c  *  Municipality_Name__r.Equalization_Ratio__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is auto-calculated as follows: &quot;List Price&quot; (from the Property) x &quot;General Tax Rate&quot; (from the Municipality) x &quot;Equalization Ratio&quot; (from the Municipality).</inlineHelpText>
    <label>Annual Property Taxes (Approximate)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>