force-app/main/default/objects/HOMEtracker__Property__c/fields/Avg_Association_Lot_fee__c.field-meta.xml
<CustomField>
    <fullName>Avg_Association_Lot_fee__c</fullName>
    <label>Avg Association/Lot Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>