force-app/main/default/objects/HOMEtracker__Property__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The batch in which this property was entered.</description>
    <inlineHelpText>The batch in which this property was entered.</inlineHelpText>
    <label>Batch</label>
    <referenceTo>bde__Batch__c</referenceTo>
    <relationshipLabel>Properties</relationshipLabel>
    <relationshipName>Properties</relationshipName>
    <type>Lookup</type>
</CustomField>