force-app/main/default/objects/HOMEtracker__Property__c/fields/Bedroom_Count__c.field-meta.xml
<CustomField>
    <fullName>Bedroom_Count__c</fullName>
    <formula>IF(ISPICKVAL(HOMEtracker__Number_of_Bedrooms__c , &quot;0&quot;), 0, 
 IF(ISPICKVAL(HOMEtracker__Number_of_Bedrooms__c , &quot;1&quot;), 1,
  IF(ISPICKVAL(HOMEtracker__Number_of_Bedrooms__c , &quot;2&quot;), 2,
   IF(ISPICKVAL(HOMEtracker__Number_of_Bedrooms__c , &quot;3&quot;), 3,
    IF(ISPICKVAL(HOMEtracker__Number_of_Bedrooms__c , &quot;4&quot;), 4,
     IF(ISPICKVAL(HOMEtracker__Number_of_Bedrooms__c , &quot;5&quot;), 5,
null)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bedroom Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>