force-app/main/default/objects/HOMEtracker__Property__c/fields/Bldg_Type_for_Utilities__c.field-meta.xml
<CustomField>
    <fullName>Bldg_Type_for_Utilities__c</fullName>
    <description>The bldg type should match the original pricing.  If original pricing is not available choose best match.</description>
    <inlineHelpText>The bldg type should match the original pricing.  If original pricing is not available choose best match.</inlineHelpText>
    <label>Bldg Type for Utilities</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Single Family Detached</fullName>
            </value>
            <value>
                <fullName>Two-Three Family/Duplex (Semi-Detached)</fullName>
                <label>Semi-Detached</label>
            </value>
            <value>
                <fullName>Row House/Garden Apt (Rowhouse/Townhouse)</fullName>
                <label>Rowhouse/Townhouse</label>
            </value>
            <value>
                <fullName>Older Multi-Family (Low Rise)</fullName>
                <label>Low Rise</label>
            </value>
            <value>
                <fullName>High-Rise with Elevator</fullName>
            </value>
            <value>
                <fullName>Mobile Home (Manufactured Home)</fullName>
                <label>Manufactured Home</label>
            </value>
            <value>
                <fullName>Older Home Converted (Semi Detached)</fullName>
                <isActive>false</isActive>
                <label>Older Home Converted (Semi Detached)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>