force-app/main/default/objects/HOMEtracker__Property__c/fields/Block__c.field-meta.xml
<CustomField>
    <fullName>Block__c</fullName>
    <description>Enter the Block</description>
    <label>Block</label>
    <length>200</length>
    <type>Text</type>
</CustomField>