force-app/main/default/objects/HOMEtracker__Property__c/fields/Block_Lot_Street__c.field-meta.xml
<CustomField>
    <fullName>Block_Lot_Street__c</fullName>
    <inlineHelpText>Text area to describe block, lot, and street.  used on Monitoring Report</inlineHelpText>
    <label>Block &amp; Lot / Street</label>
    <type>TextArea</type>
</CustomField>