force-app/main/default/objects/HOMEtracker__Property__c/fields/Calculation_Message__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Message__c</fullName>
    <label>Calculation Message</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>