force-app/main/default/objects/HOMEtracker__Property__c/fields/Calculation_Status__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Status__c</fullName>
    <label>Calculation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>